# 2dGame

./: CMakeLists.txt
saves/: checkpoint_1.save  checkpoint_2.save  checkpoint_4.save
src/: Archer.cpp  Archer.h  Arrow.cpp  Arrow.h  Boss.cpp  Boss.h  Button.cpp  Button.h  Checkpoint.cpp  Checkpoint.h  CheckpointManager.cpp  CheckpointManager.h  Editor.cpp  Editor.h  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  FPS.cpp  FPS.h  HUD.cpp  HUD.h  ImageDisplay.cpp  ImageDisplay.h  LevelHandler.cpp  LevelHandler.h  MagicProjectile.cpp  MagicProjectile.h  MagicStaff.cpp  MagicStaff.h  MainMenu.cpp  MainMenu.h  Obstacle.cpp  Obstacle.h  OptionsMenu.cpp  OptionsMenu.h  PauseMenu.cpp  PauseMenu.h  Player.cpp  Player.h  (+18 more)
